src/objects/TOP__c.object
<CustomObject>
    <fields>
        <fullName>Physical_Health_Status__c</fullName>
        <label>Physical Health Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Psychological_health_status__c</fullName>
        <inlineHelpText>Client&apos;s rating ofpsychoological health status (anxiety, depression and problem emotions and feelings)</inlineHelpText>
        <label>Psychological health status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shoplifting_Total__c</fullName>
        <formula>Shoplifting_Week_1__c + Shoplifting_Week_2__c + Shoplifting_Week_3__c + Shoplifting_Week_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shoplifting Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shoplifting_Week_1__c</fullName>
        <inlineHelpText>Days shoplifting</inlineHelpText>
        <label>Shoplifting Week 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shoplifting_Week_2__c</fullName>
        <inlineHelpText>Days Shoplifting</inlineHelpText>
        <label>Shoplifting Week 2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shoplifting_Week_3__c</fullName>
        <inlineHelpText>Days Shoplifting</inlineHelpText>
        <label>Shoplifting Week 3</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Substance_Use__c</fullName>
        <formula>&quot;Left Column: Record the number of days substance used each week&quot;&amp; BR() &amp;
&quot;Right column: Record the average amount on a using day&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Substance Use</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOP_Interview_Date__c</fullName>
        <label>TOP Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Theft_from_or_of_vehicle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Theft from or of vehicle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Times_injected_per_day_Total__c</fullName>
        <formula>Times_injected_per_day__c  +Times_injected_per_day_Week_2__c  +Times_injected_per_day_Week_3__c + Times_injected_per_day_Week_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Times injected per day Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Times_injected_per_day_Week_2__c</fullName>
        <label>Times injected per day Week 2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Times_injected_per_day_Week_3__c</fullName>
        <label>Times injected per day Week 3</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Times_injected_per_day_Week_4__c</fullName>
        <label>Times injected per day Week 4</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Times_injected_per_day__c</fullName>
        <label>Times injected per day Week 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Treatment_Stage__c</fullName>
        <label>Treatment Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Start</fullName>
                </value>
                <value>
                    <fullName>Top 2</fullName>
                </value>
                <value>
                    <fullName>Top 3</fullName>
                </value>
                <value>
                    <fullName>Top 4</fullName>
                </value>
                <value>
                    <fullName>Top 5</fullName>
                </value>
                <value>
                    <fullName>Top 6</fullName>
                </value>
                <value>
                    <fullName>Exit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TOP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>TOP_Interview_Date__c</columns>
        <columns>NAME</columns>
        <columns>Physical_Health_Status__c</columns>
        <columns>Psychological_health_status__c</columns>
        <columns>Overall_Quality_of_Life__c</columns>
        <columns>Number_of_Days_injected_Total__c</columns>
        <columns>Alcohol_Total__c</columns>
        <columns>Opiates_Total__c</columns>
        <columns>Ecstasy_Total__c</columns>
        <columns>Crack_Total__c</columns>
        <columns>Cocaine_Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TOP-{DD}/{MM}/{YY}-{000}</displayFormat>
        <label>TOP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TOPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>